--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt facilis minima eveniet accusamus rem sint doloribus quia eligendi expedita optio, dolore quo ipsa atque. Expedita doloremque deleniti alias iste quia?</p>
              <a download href="#"><button class="download-cv">Download CV</button></a>
           </div>
-          <img src="https://res.cloudinary.com/freelancer2222222222222222/image/upload/v1650543288/samples/pexels-photo-1516680-removebg-preview_f7yxxl.png" alt="">
+          <img src="/img/IMG_20230802_170947770-removebg-preview.png" alt="">
         </main>
       </div>
         <div class="about">
-          <img src="https://res.cloudinary.com/freelancer2222222222222222/image/upload/v1650543288/samples/about_grtker.png" alt="">
+          <img src="/img/IMG_20230802_172719301.jpg" alt="">
           <div class="about-info">
             <h2>About me</h2>
             <div class="divider"></div>
@@ -128,7 +128,7 @@
             <div class="divider"></div>
           </div>
           <div class="container-contact">
-            <img src="https://res.cloudinary.com/freelancer2222222222222222/image/upload/v1650543288/samples/img-opacity50_jgruyl.png" alt="">
+            <img src="/img/output-onlinepngtools.png" alt="">
             <div class="contact-form">
               <h4>Send me a message...</h4>
               <form class="form-group">
