New files added and linked to HTML

--- a/index.html
+++ b/index.html
@@ -152,5 +152,6 @@
             <i class="fab fa-twitter-square"></i>
           </div>
         </footer>
+  <script src="/js/script.js"></script>
 </body>
 </html>
