--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
           <div class="container">
             <div class="card">
-              <div class="card__img">
+              <div class="card__img-1">
               </div>
               <div class="card__title">
                 <h2>Project Description</h2>
@@ -74,7 +74,7 @@
               </div>
             </div>
             <div class="card">
-              <div class="card__img">
+              <div class="card__img-2">
               </div>
               <div class="card__title">
                 <h2>Project Description</h2>
@@ -97,7 +97,7 @@
               </div>
             </div>
             <div class="card">
-              <div class="card__img">
+              <div class="card__img-3">
               </div>
               <div class="card__title">
                 <h2>Project Description</h2>
