index.html has been added links

--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
                 <h2>Project Description</h2>
               </div>
               <div class="card__proyect-links">
-                <a href="#">
+                <a href="https://github.com/AnonSYS23/web-flappybird">
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="">
+                <a href="https://web-flappybird-clone-1-0.vercel.app/">
                   <i class="fas fa-globe-asia"></i>
                 </a>
-                <a href="">
+                <a href="https://github.com/AnonSYS23/web-flappybird/releases/tag/result">
                   <i class="fas fa-code"></i>
                 </a>
               </div>
               <div class="button-content">
                 <button class="project-details-button download-cv">
-                  <a href="#">Project Details</a>
+                  <a href="https://github.com/AnonSYS23/web-flappybird">Project Details</a>
                 </button>
               </div>
             </div>
@@ -80,19 +80,19 @@
                 <h2>Project Description</h2>
               </div>
               <div class="card__proyect-links">
-                <a href="#">
+                <a href="https://github.com/AnonSYS23/example-website">
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="">
+                <a href="example-landing-webpage.vercel.app">
                   <i class="fas fa-globe-asia"></i>
                 </a>
-                <a href="">
+                <a href="https://github.com/AnonSYS23/example-website/releases/tag/result">
                   <i class="fas fa-code"></i>
                 </a>
               </div>
               <div class="button-content">
                 <button class="project-details-button download-cv">
-                  <a href="#">Project Details</a>
+                  <a href="https://github.com/AnonSYS23/example-website">Project Details</a>
                 </button>
               </div>
             </div>
@@ -103,19 +103,19 @@
                 <h2>Project Description</h2>
               </div>
               <div class="card__proyect-links">
-                <a href="#">
+                <a href="https://github.com/AnonSYS23/web-pokedex">
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="">
+                <a href="web-pokedex-1-0.vercel.app">
                   <i class="fas fa-globe-asia"></i>
                 </a>
-                <a href="">
+                <a href="https://github.com/AnonSYS23/web-pokedex/releases/tag/result">
                   <i class="fas fa-code"></i>
                 </a>
               </div>
               <div class="button-content">
                 <button class="project-details-button download-cv">
-                  <a href="#">Project Details</a>
+                  <a href="https://github.com/AnonSYS23/web-pokedex">Project Details</a>
                 </button>
               </div>
             </div>
