--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <a href="https://github.com/AnonSYS23/example-website">
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="example-landing-webpage.vercel.app">
+                <a href="https://example-landing-webpage.vercel.app/">
                   <i class="fas fa-globe-asia"></i>
                 </a>
                 <a href="https://github.com/AnonSYS23/example-website/releases/tag/result">
