--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <a href="https://github.com/AnonSYS23/web-pokedex">
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://web-flappybird-clone-1-0.vercel.app/">
+                <a href="https://web-pokedex-1-0.vercel.app">
                   <i class="fas fa-globe-asia"></i>
                 </a>
                 <a href="https://github.com/AnonSYS23/web-pokedex/releases/tag/result">
